# DialysisSystem

./: .gitignore  .gitmodules  DialysisSystem.sln  README.md  dialysissystem.code-workspace
DialysisMobile/: App.xaml  AppShell.xaml  DialysisMobile.csproj  GlobalXmlns.cs
DialysisMobile.Native/app/: build.gradle
DialysisMobile.Native/app/jni/src/: Android.mk  CMakeLists.txt  game_bridge.c
DialysisMobile.Native/app/jni/src/doomgeneric/: d_main.c
DialysisMobile/Control/: WadHelper.cs
DialysisMobile/Data/: CategoryRepository.cs  Constants.cs  JsonContext.cs  ProjectRepository.cs  SeedDataService.cs  TagRepository.cs
DialysisMobile/Models/: Category.cs  IconData.cs  ProjectTask.cs  ProjectsTags.cs  Tag.cs
DialysisMobile/PageModels/: IProjectTaskPageModel.cs  MainPageModel.cs  ManageMetaPageModel.cs  ProjectDetailPageModel.cs  ProjectListPageModel.cs  TaskDetailPageModel.cs
DialysisMobile/Pages/: MainPage.xaml  MainPage.xaml.cs  ProjectDetailPage.xaml  ProjectDetailPage.xaml.cs  ProjectListPage.xaml  ProjectListPage.xaml.cs  TaskDetailPage.xaml
DialysisMobile/Services/: ModalErrorHandler.cs
DialysisMobile/Utilities/: ProjectExtensions.cs  TaskUtilities.cs
DialysisServer/: DialysisServer.csproj  DialysisServer.http  Program.cs  appsettings.json  database.sqlite
DialysisServer.Tests/: DialysisServer.Tests.csproj  UnitTestsDb.cs
New folder/: README_cyclami_ble_reader.md  cyclami_ble_reader.py
Shared.Library/: Class1.cs  SensorDataDTO.cs
mobile/: App.xaml.cs  AppShell.xaml.cs  DialysisMobile.csproj  GlobalUsings.cs  MauiProgram.cs
(+58 files in other folders)
